syntax = "proto3";


option csharp_namespace = "bankClient";

// NEW HERE VER DPS ---- account number ?

service BankClientCommunications {
	rpc Deposite(DepositeRequest) returns (DepositeReply);
	rpc Withdrawal(WithdrawalRequest) returns (WithdrawalReply);
	rpc Read(ReadRequest) returns (ReadReply);
	rpc Register(RegisterRequest) returns (RegisterReply);
}


message RegisterRequest{
	string name = 1;
}

message RegisterReply{
	bool ok = 1;
}

message DepositeRequest{
	string name = 1;
	float amount = 2;
}

message DepositeReply{
	bool ok = 1;
}

message WithdrawalRequest{
	string name = 1;
	float amount = 2;
}

message WithdrawalReply{
	bool ok = 1;
}

message ReadRequest{
	string name = 1;
}

message ReadReply{
	float amount = 1;
}

